# ur5_allegro_moveit

./: .setup_assistant  CMakeLists.txt  README.md  package.xml  ur5_allegro.urdf.xacro  ur5_allegro.xacro
config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur5_allegro.srdf
launch/: demo.launch  merged_joint_states.launch  move_group.launch  moveit.rviz  moveit2.rviz  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  try_allegro.launch  try_allegro2.launch  ur5_allegro_bringup.launch  ur5_allegro_upload.launch
models/: ur5_allegro.xacro
src/: closegrip.cpp  dummyforce.cpp  goal.cpp  js_merger_node.cpp
